# Clangd-Docker-NeoVim

./: .gitignore  Dockerfile  README.md
architecture/: simple_architecture.drawio
examples/exampleApp/: CMakeLists.txt  main.cpp
examples/exampleLibrary/: CMakeLists.txt  exampleLib.cpp  exampleLib.hpp
